src/test/deca/context/invalid/ParamVoid.deca
class A{
  void f(void x){

  }
}
